Mobile view - find now btn gap fixed

--- a/responsive.css
+++ b/responsive.css
@@ -86,6 +86,7 @@
         width: 255px;
         height: 52px;
         flex-shrink: 0;
+       margin-top: 10px;
     
     }
 
